[tool.poetry]
name = "todos"
version = "0.1.0"
description = ""
authors = ["Vincent Dupont <vincent.dupont@databook.com>"]
license = "MIT"

[tool.poetry.scripts]
start = 'scripts:start'
format = 'scripts:code_format'

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
skip = "alembic"
